<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/enter"
        android:layout_width="301dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:text="@string/enter"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:backgroundTint="#00ACC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/about"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:backgroundTint="#00ACC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor = "?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>